WIP: Troubleshooting flickering/jumping issues with animations

--- a/frontend/src/app/network/graph/graph.component.scss
+++ b/frontend/src/app/network/graph/graph.component.scss
@@ -14,48 +14,24 @@
   svg {
     flex: 1 1 auto;
 
-    g[app-node], g.top-level, * {
+    * {
       outline: none;
-      // transition: $animationDuration ease-in-out all;
     }
 
-    // .shrink          { animation: shrink ease-in-out $animationDuration; }
-    // .grow            { animation: grow ease-in-out $animationDuration; }
-    // .moving          { animation: shrink ease-in-out $animationDuration; }
-    // .menuDone        { animation: shrink ease-in-out $animationDuration; }
-    // .rootDone        { animation: shrink ease-in-out $animationDuration; }
-    // .childDone       { animation: grow ease-in-out $animationDuration; }
-    // .grandchildDone  { animation: grow ease-in-out $animationDuration; }
+    g {
+      &.level-0,
+      &.level-0-node,
+      &.level-1,
+      &.level-1-line,
+      &.level-1-node,
+      &.level-2-line,
+      &[app-node] {
+        transition: $animationDuration ease-in-out all;
+      }
+    }
 
     line {
       stroke-width: 4px;
-      // transition: $animationDuration ease-in-out all;
-      // animation: shrink ease-in-out $animationDuration;
     }
   }
 }
-
-
-// @keyframes shrink {
-//   0% {
-//     transform: scale(1);
-//     opacity: 1;
-//   }
-
-//   50%, 100% {
-//     transform: scale(0);
-//     opacity: 0;
-//   }
-// }
-
-// @keyframes grow {
-//   0%, 50% {
-//     transform: scale(0);
-//     opacity: 0;
-//   }
-
-//   100% {
-//     transform: scale(1);
-//     opacity: 1;
-//   }
-// }
